--- a/index.css
+++ b/index.css
@@ -31,20 +31,32 @@ h1 {
   top: 10px;
   left:10px;
 }
+
+.js-weather {
+  position: absolute;
+  top: 80px;
+  left: 10px;
+}
+
 .js-form {
   position : absolute;
-  top: 80px;
+  top: 110px;
   left:10px;
 }
 .js-greetings{
   position : absolute;
-  top: 60px;
+  top: 90px;
   left:10px;
 }
 .js-toDoForm {
   position: absolute;
-  top: 110px;
+  top: 140px;
   left:10px;
+}
+.js-toDoList {
+  position: absolute;
+  top: 160px;
+  left: 10px;
 }
 
 @keyframes fadeIn {
